err/pynomo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyNomo-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynomo'...
Compiling './lib/python3.5/site-packages/pynomo/isopleth.py'...
***   File "./lib/python3.5/site-packages/pynomo/isopleth.py", line 75
    ref_atom.params['tag']='ref'+`idx`+`self.ref_tag_number`
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynomo/nomo_axis.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomo_axis.py", line 475
    print "start_decade value %f"%-10**start_decade
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynomo/nomo_axis_func.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomo_axis_func.py", line 464
    print "starts optimizing..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynomo/nomo_grid_box.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomo_grid_box.py", line 585
    print toc-tic,' has elapsed'
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynomo/nomo_wrapper.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomo_wrapper.py", line 172
    print "Wrong transformation identifier"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynomo/nomograph.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomograph.py", line 122
    print "nomo_type not valid"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynomo/nomograph3.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomograph3.py", line 172
    print nomograph.give_x1(0.5)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynomo/nomograph_N_lin.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomograph_N_lin.py", line 41
    '5': self._make_5_}[`N`]()
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynomo/nomographer.py'...
***   File "./lib/python3.5/site-packages/pynomo/nomographer.py", line 207
    print "##### SINGLE BLOCK PARAMS #######"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
